  instead of Orthanc own AcceptedTransferSyntaxes.
* Made the default SQLite DB more robust wrt future updates like adding new columns in DB.
* Made the HTTP Client errors more verbose by including the url in the logs.
* Optimization: now using multiple threads to transcode files for asynchronous download of studies archive.

REST API
--------

* Loosen the sanity checks for DICOM modifications:
  - allow modification of PatientID at study level
  - allow modification of PatientID, StudyInstanceUID at series level
  - allow modification of PatientID, StudyInstanceUID, SeriesInstanceUID at instance level
  - allow modification of a patient without changing her PatientID
  Users should be careful to preserve the DICOM model when modifying high level tags.  E.g.
  if you modify the PatientID at study level, also make sure to modify all other Patient related
  tags (PatientName, PatientBirthDate, ...)
* Allow the HTTP server to return responses > 2GB (fixes asynchronous download of zip studies > 2GB)
* /modalities/.../store now accepts "CalledAet", "Host", "Port" to override the modality configuration 
  from the configuration file for a specific operation.
* /tools/metrics-prometheus: added orthanc_last_change and orthanc_up_time_s
* Tolerance for "image/jpg" MIME type instead of "image/jpeg" in /tools/create-dicom


OrthancFramework (C++)
----------------------

* DicomModification::SetAllowManualIdentifiers() has been removed since it was always true -> code cleanup.


Common plugins code (C++)
-------------------------

* Added a 'header' argument to all OrthancPeers::DoPost, DoPut, ... 


version 1.11.2 (2022-08-30)
===========================

General
-------

* Added support for RGBA64 images in tools/create-dicom and /preview
* New configuration "MaximumStorageMode" to choose between recyling of
  old patients (default behavior) and rejection of new incoming data when
  the MaximumStorageSize has been reached.

Bug Fixes
---------
