@@ -106,6 +106,7 @@ namespace Orthanc
     uint16_t port_;
     IIncomingHttpRequestFilter* filter_;
     bool keepAlive_;
+    unsigned int keepAliveTimeout_;
     bool httpCompression_;
     IHttpExceptionFormatter* exceptionFormatter_;
     std::string realm_;
@@ -157,7 +158,11 @@ namespace Orthanc
 
     bool IsKeepAliveEnabled() const;
 
+    unsigned int GetKeepAliveTimeout() const;
+
     void SetKeepAliveEnabled(bool enabled);
+
+    void SetKeepAliveTimeout(unsigned int timeout);
 
     const std::string& GetSslCertificate() const;
 
